--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@staticwagomu/todotxt-parser",
+	"name": "@wagomu/todotxt-parser",
 	"version": "0.0.1",
 	"description": "A pure TypeScript parser for todo.txt format",
 	"license": "0-BSD",
