ci: add GitHub Actions workflow with Biome linter
プルリクエストとmainブランチへのpush時に、コード品質を
自動チェックするCI基盤を構築。

**なぜこの変更が必要か:**
- OSSライブラリとして公開する際、一貫したコード品質の担保が必須
- 手動チェックに頼ると、フォーマットの揺れやlintエラーの見逃しが発生
- コントリビューターにも明確な品質基準を提示できる

**なぜBiomeを選択したか:**
- Rustベースで高速（PrettierやESLintより桁違いに速い）
- lint + formatを1ツールで完結（ツールチェーンの複雑化を回避）
- TypeScript/JSONのゼロ設定対応で、追加の設定ファイルが最小限

**なぜジョブを分離したか:**
- lint/typecheck/test/buildを並列実行し、失敗箇所の特定を容易化
- 1つのチェックが失敗しても、他のチェック結果を確認できる
- 将来的にMatrix戦略（複数Node.jsバージョン）への拡張が容易

**concurrency設定の意図:**
- 同一ブランチへの連続pushで古いワークフローをキャンセル
- CI実行時間とGitHub Actions使用量の削減

--- a/package.json
+++ b/package.json
@@ -31,10 +31,15 @@
 		"build": "tsup",
 		"test": "vitest run",
 		"test:watch": "vitest",
-		"lint": "tsc --noEmit",
+		"typecheck": "tsc --noEmit",
+		"lint": "biome lint .",
+		"format": "biome format --write .",
+		"format:check": "biome format .",
+		"check": "biome check .",
 		"prepublishOnly": "pnpm run build"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "^2.3.11",
 		"tsup": "^8.5.0",
 		"typescript": "^5.8.3",
 		"vitest": "^4.0.16"
