--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"format": "biome format --write .",
 		"format:check": "biome format .",
 		"check": "biome check .",
-		"prepublishOnly": "pnpm run build"
+		"prepublishOnly": "bun run build"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.11",
